# strg-legacy

./: .gitignore  Cargo.toml  README.md  package.json
.github/: dependabot.yml
runner/: package.json
src/: main.rs
src/core/: mod.rs  strg.rs  tools.rs  watch.rs
